Fix background parallax gaps across aspect ratios

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -445,7 +445,7 @@ div.search {
     text-align: center;
     color: #526172;
     font-size: 0.85rem;
-    padding: 0.6rem 0 1rem;
+    padding: 0;
 }
 
 @media (max-width: 780px) {
